# prog2006-2025

./: .gitignore  README.md
labs/lab01/: README.md
labs/lab01/task2/: README.md  hardhat.config.js  package.json
labs/lab01/task2/contracts/: RockPaperScissors.sol
labs/lab01/task2/frontend/: RockPaperScissors.json  app.js  index.html  style.css
labs/lab02/: README.md
labs/lab02/gitlab-fund/: .gitignore  README.md  deployments.json  frontend-testing.txt  hardhat.config.ts  package.json  tsconfig.json  tsconfig.node.json
labs/lab03/: README.md
labs/lab03/helloworld/: README.md  helloworld.cabal  package.yaml
labs/lab04/: README.md
labs/lab04/haskellAgeLab04/: CHANGELOG.md  LICENSE  README.md  haskellAgeLab04.cabal  package.yaml
labs/lab05/: README.md
labs/lab05/haskellLab05/: CHANGELOG.md  README.md  haskellLab05.cabal  package.yaml  stack.yaml
labs/lab06/: README.md
labs/lab06/lab06/: CHANGELOG.md  LICENSE  README.md  Setup.hs  lab06.cabal  package.yaml  stack.yaml
labs/lab06/lab06/app/: Main.hs
labs/lab06/lab06/src/: Lib.hs
labs/lab06/lab06/test/: Spec.hs
labs/lab07/: README.md
labs/lab07/lab07/: README.md  data.txt  lab07.cabal  note.txt  package.yaml  stack.yaml
labs/lab08/: README.md
labs/lab08/lab08/: README.md
labs/lab09/: README.md
labs/lab09/lab09/: Cargo.toml  README.md
labs/lab09/lab09/src/: lib.rs  main.rs
labs/lab09/lab09/tests/: api_tests.rs
labs/lab10/: README.md
labs/lab10/snake_game/: Cargo.toml  README.md
labs/lab10/snake_game/assets/audio/: README.md  game_over.aiff
labs/lab10/snake_game/src/: clear_high_scores.rs  convert_audio.rs  main.rs
labs/lab10/snake_game/src/logic/: collision.rs  food.rs  grid.rs  mod.rs  multi_player.rs  single_player.rs  snake.rs
labs/lab10/snake_game/src/state/: game_state.rs  mod.rs  multi_player_state.rs  single_player_state.rs
labs/lab10/snake_game/src/ui/: game_over.rs  game_view.rs  high_scores.rs  menu.rs  mod.rs  multi_player_view.rs  settings.rs  single_player_view.rs
labs/lab10/snake_game/src/utils/: audio.rs  constants.rs  helpers.rs  mod.rs  storage.rs
labs/lab11/: README.md
labs/lab11/ecosystem_simulation/: Cargo.toml  README.md  ecosystem-strategies.json
labs/lab11/ecosystem_simulation/src/: constants.rs  main.rs  simulation.rs
labs/lab11/ecosystem_simulation/src/agents/: agent.rs  decision.rs  mod.rs  sensing.rs
labs/lab11/ecosystem_simulation/src/environment/: cell.rs  grid.rs  mod.rs  resources.rs
labs/lab11/ecosystem_simulation/src/evolution/: breeding.rs  metrics.rs  mod.rs  selection.rs
labs/lab11/ecosystem_simulation/src/heuristics/: mod.rs  parameters.rs  serialization.rs  strategy.rs
labs/lab11/ecosystem_simulation/src/statistics/: charts.rs  collector.rs  history.rs  mod.rs
labs/lab11/ecosystem_simulation/src/ui/: app.rs  controls.rs  heuristic_editor.rs  mod.rs  simulation_view.rs  statistics_view.rs  styles.rs
labs/lab12/: README.md
labs/lab12/lab12-bprog/: CHANGELOG.md  README.md  debug.sh  fix-test.patch  lab12-bprog.cabal  package.yaml  test-c-level.sh  test-d-level.sh  test-failure.bprog
labs/lab13/: README.md
labs/lab13/lab13-bprog-compiler/: CHANGELOG.md  README.md  compile_and_run.sh  demo_run.sh  factorial.wasm  factorial_demo.sh  factorial_template.wat  fixed_compile_run.sh  fixed_template.wat  lab13-bprog-compiler.cabal  package.yaml  run_wasm.js  stack.yaml  test.wat
(+128 files in other folders)
