cabal-version: 2.2

name:           lab06
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/marni/lab06#readme>
homepage:       https://github.com/marni/lab06#readme
bug-reports:    https://github.com/marni/lab06/issues
author:         Mariusz Nowostawski
maintainer:     mariusz.nowostawski@ntnu.no
copyright:      2025 (C) Nowostawski
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/marni/lab06

library
  exposed-modules:
      Lib
  other-modules:
      Paths_lab06
  autogen-modules:
      Paths_lab06
  hs-source-dirs:
      src
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
  build-depends:
      base >=4.7 && <5
  default-language: Haskell2010

executable lab06-exe
  main-is: Main.hs
  other-modules:
      Paths_lab06
  autogen-modules:
      Paths_lab06
  hs-source-dirs:
      app
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , lab06
  default-language: Haskell2010

test-suite lab06-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_lab06
  autogen-modules:
      Paths_lab06
  hs-source-dirs:
      test
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , doctest
    , lab06
  default-language: Haskell2010