[package]
name = "rest_api_lab"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.20"
tokio = { version = "1.32.0", features = ["full", "test-util"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
reqwest = { version = "0.11.20", features = ["json"] }
chrono = { version = "0.4.31", features = ["serde"] }
tower = "0.4.13"
hyper = "0.14.27"

[dev-dependencies]
tower-service = "0.3.2"