[package]
name = "snake_game"
version = "0.1.0"
edition = "2021"
authors = ["Tung No <jktungno@gmail.com>"]
description = "A Snake Game implementation using Iced"

[dependencies]
iced = { version = "0.10", features = ["canvas", "debug"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5.0"
rodio = "0.17"
once_cell = "1.18"
chrono = "0.4"
minimp3 = "0.5.1"
hound = "3.5"

[[bin]]
name = "convert_audio"
path = "src/convert_audio.rs"
