[package]
name = "ecosystem_simulation"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.10", features = ["canvas", "tokio", "debug"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
uuid = { version = "1.6", features = ["v4"] }